// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Accordion /> opens and closes the <Accordion /> component 1`] = `
<div
  class="accordion__Container-sc-18wjw0h-0 fCRomn"
>
  <div
    class="accordion__Inner-sc-18wjw0h-2 gljXT"
  >
    <h1
      class="accordion__Title-sc-18wjw0h-3 itrxPc"
    >
      Frequently Asked Questions
    </h1>
    <div
      class="accordion__Frame-sc-18wjw0h-1 imxgyO"
    >
      <div
        class="accordion__Item-sc-18wjw0h-4 gxWxMe"
      >
        <div
          class="accordion__Header-sc-18wjw0h-5 jgeFUR"
        >
          What is Netflix?
          <img
            alt="Open"
            src="/images/icons/add.png"
          />
        </div>
      </div>
      <div
        class="accordion__Item-sc-18wjw0h-4 gxWxMe"
      >
        <div
          class="accordion__Header-sc-18wjw0h-5 jgeFUR"
        >
          How much does Netflix cost?
          <img
            alt="Open"
            src="/images/icons/add.png"
          />
        </div>
      </div>
      <div
        class="accordion__Item-sc-18wjw0h-4 gxWxMe"
      >
        <div
          class="accordion__Header-sc-18wjw0h-5 jgeFUR"
        >
          Where can I watch?
          <img
            alt="Open"
            src="/images/icons/add.png"
          />
        </div>
      </div>
      <div
        class="accordion__Item-sc-18wjw0h-4 gxWxMe"
      >
        <div
          class="accordion__Header-sc-18wjw0h-5 jgeFUR"
        >
          How do I cancel?
          <img
            alt="Open"
            src="/images/icons/add.png"
          />
        </div>
      </div>
      <div
        class="accordion__Item-sc-18wjw0h-4 gxWxMe"
      >
        <div
          class="accordion__Header-sc-18wjw0h-5 jgeFUR"
        >
          What can I watch on Netflix?
          <img
            alt="Open"
            src="/images/icons/add.png"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> renders the <Accordion /> with populated data 1`] = `
<div
  class="accordion__Container-sc-18wjw0h-0 fCRomn"
>
  <div
    class="accordion__Inner-sc-18wjw0h-2 gljXT"
  >
    <h1
      class="accordion__Title-sc-18wjw0h-3 itrxPc"
    >
      Frequently Asked Questions
    </h1>
    <div
      class="accordion__Item-sc-18wjw0h-4 gxWxMe"
    >
      <div
        class="accordion__Header-sc-18wjw0h-5 jgeFUR"
      >
        What is Netflix?
        <img
          alt="Open"
          src="/images/icons/add.png"
        />
      </div>
    </div>
    <div
      class="accordion__Item-sc-18wjw0h-4 gxWxMe"
    >
      <div
        class="accordion__Header-sc-18wjw0h-5 jgeFUR"
      >
        How much does Netflix cost?
        <img
          alt="Open"
          src="/images/icons/add.png"
        />
      </div>
    </div>
    <div
      class="accordion__Item-sc-18wjw0h-4 gxWxMe"
    >
      <div
        class="accordion__Header-sc-18wjw0h-5 jgeFUR"
      >
        Where can I watch?
        <img
          alt="Open"
          src="/images/icons/add.png"
        />
      </div>
    </div>
    <div
      class="accordion__Item-sc-18wjw0h-4 gxWxMe"
    >
      <div
        class="accordion__Header-sc-18wjw0h-5 jgeFUR"
      >
        How do I cancel?
        <img
          alt="Open"
          src="/images/icons/add.png"
        />
      </div>
    </div>
    <div
      class="accordion__Item-sc-18wjw0h-4 gxWxMe"
    >
      <div
        class="accordion__Header-sc-18wjw0h-5 jgeFUR"
      >
        What can I watch on Netflix?
        <img
          alt="Open"
          src="/images/icons/add.png"
        />
      </div>
    </div>
  </div>
</div>
`;
